// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case: "" 1`] = `
Array [
  Object {
    "style": "::",
    "type": 3,
    "value": "0",
  },
]
`;

exports[`case: "" 2`] = `"{0, date, ::}"`;

exports[`case: "" 3`] = `Object {}`;

exports[`case: "EEE, MMM d, ''yy" 1`] = `
Array [
  Object {
    "style": Object {
      "pattern": "EEE, MMM d, ''yy",
      "type": 1,
    },
    "type": 3,
    "value": "0",
  },
]
`;

exports[`case: "EEE, MMM d, ''yy" 2`] = `"{0, date, ::EEE, MMM d, ''yy}"`;

exports[`case: "EEE, MMM d, ''yy" 3`] = `
Object {
  "day": "numeric",
  "month": "short",
  "weekday": "short",
  "year": "2-digit",
}
`;

exports[`case: "h:mm a" 1`] = `
Array [
  Object {
    "style": Object {
      "pattern": "h:mm a",
      "type": 1,
    },
    "type": 3,
    "value": "0",
  },
]
`;

exports[`case: "h:mm a" 2`] = `"{0, date, ::h:mm a}"`;

exports[`case: "h:mm a" 3`] = `
Object {
  "hour": "numeric",
  "hour12": true,
  "hourCycle": "h12",
  "minute": "2-digit",
}
`;

exports[`case: "yyyy.MM.dd G 'at' HH:mm:ss vvvv" 1`] = `
Array [
  Object {
    "style": Object {
      "pattern": "yyyy.MM.dd G 'at' HH:mm:ss vvvv",
      "type": 1,
    },
    "type": 3,
    "value": "0",
  },
]
`;

exports[`case: "yyyy.MM.dd G 'at' HH:mm:ss vvvv" 2`] = `"{0, date, ::yyyy.MM.dd G 'at' HH:mm:ss vvvv}"`;

exports[`case: "yyyy.MM.dd G 'at' HH:mm:ss zzzz" 1`] = `
Object {
  "day": "2-digit",
  "era": "short",
  "hour": "2-digit",
  "hourCycle": "h23",
  "minute": "2-digit",
  "month": "2-digit",
  "second": "2-digit",
  "timeZoneName": "long",
  "year": "numeric",
}
`;
